--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <div class="container">
+            <div class="header">
+                <div class="header__link">
+                    <a href="#" class="header__nav-link">Обо мне</a>
+                    <a href="#" class="header__nav-link">Портфолио</a>
+                    <a href="#" class="header__nav-link">Этапы работ</a>
+                    <a href="#" class="header__nav-link">Цены</a>
+                    <a href="#" class="header__nav-link">Обратная связь</a>
+                </div>
+                <div class="header__contact-link">
+                    <a href="#" class="header__phone">8 923 777-77-77</a>
+                    <span class="header__separator"></span>
+                    <a href="#" class="header__amail">alexdev@gmail.com</a>
+                </div>
+            </div>
+        </div>
+        <secrion class="hero">
+            <div class="container">
+                <img src="./images/banner.png" alt="" class="hero__banner">
+                <h2 class="hero__name">Александр Антропов</h2>
+                <h1 class="hero__info">web-разработчик</h1>
+            </div>
+        </secrion>
+    </header>
 </body>
 </html>
