--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,17 @@
                 <img src="./images/banner.png" alt="" class="hero__banner">
                 <h2 class="hero__name">Александр Антропов</h2>
                 <h1 class="hero__info">web-разработчик</h1>
+                <div class="hero__social-info">
+                    <div class="hero__additionall">
+                        <a href="#"class="hero__discussion">Обсудить проект</a>
+                        <img class="herro__arrow" src="./images/objects/arrow.svg" alt="">
+                    </div>
+                    <div class="social">
+                        <a href="#" class="hero__social__vk">Vk</a>
+                        <a href="#" class="hero__social__vk">Youtube</a>
+                        <a href="#" class="hero__social__vk">Linkedin</a>
+                    </div>
+                </div>
             </div>
         </secrion>
     </header>
