--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,11 @@
                         <a href="#"class="hero__discussion">Обсудить проект</a>
                         <img class="herro__arrow" src="./images/objects/arrow.svg" alt="">
                     </div>
-                    <div class="social">
-                        <a href="#" class="hero__social__vk">Vk</a>
-                        <a href="#" class="hero__social__vk">Youtube</a>
-                        <a href="#" class="hero__social__vk">Linkedin</a>
+                    <div class="hero__social">
+                        <a href="#" class="hero__social-link">Vk</a>
+                        <a href="#" class="hero__social-link">Youtube</a>
+                        <a href="#" class="hero__social-link">Linkedin</a>
+                        <img src="../src/images/objects/ellipse.png" alt="" class="hero__ellipse">
                     </div>
                 </div>
             </div>
