--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,26 @@
                     </div>
                     <div class="hero__social">
                         <a href="#" class="hero__social-link">Vk</a>
-                        <a href="#" class="hero__social-link">Youtube</a>
+                        <a href="#" class="hero__social-link">Youtube <span class="hero__ellipse"></span></a>
                         <a href="#" class="hero__social-link">Linkedin</a>
-                        <img src="../src/images/objects/ellipse.png" alt="" class="hero__ellipse">
+                    </div>
+                </div>
+                <div class="hero__web">
+                    <div class="hero__web-info">
+                        <p class="hero__description">FRONT-END</p>
+                        <p class="hero__text">HTML+CSS+JS кодирование дизайнов любой сложности</p>
+                    </div>
+                    <div class="hero__web-info">
+                        <p class="hero__description">Back-end</p>
+                        <p class="hero__text">Разработка сложной back-end логики для готового front-end</p>
+                    </div>
+                    <div class="hero__web-info">
+                        <p class="hero__description">WORDPRESS</p>
+                        <p class="hero__text">Разработка сайтов - от блога до интернет магазина</p>
+                    </div>
+                    <div class="hero__web-info">
+                        <p class="hero__description">SEO продвижение</p>
+                        <p class="hero__text">Качественное улучшение позиций сайта в поисковой выдаче</p>
                     </div>
                 </div>
             </div>
