--- a/src/index.html
+++ b/src/index.html
@@ -23,42 +23,86 @@
                 </div>
             </div>
         </div>
-        <secrion class="hero">
-            <div class="container">
-                <img src="./images/banner.png" alt="" class="hero__banner">
-                <h2 class="hero__name">Александр Антропов</h2>
-                <h1 class="hero__info">web-разработчик</h1>
-                <div class="hero__social-info">
-                    <div class="hero__additionall">
-                        <a href="#"class="hero__discussion">Обсудить проект</a>
-                        <img class="herro__arrow" src="./images/objects/arrow.svg" alt="">
-                    </div>
-                    <div class="hero__social">
-                        <a href="#" class="hero__social-link">Vk</a>
-                        <a href="#" class="hero__social-link">Youtube <span class="hero__ellipse"></span></a>
-                        <a href="#" class="hero__social-link">Linkedin</a>
-                    </div>
+    </header>
+    <main class="hero">
+        <div class="container">
+            <img src="./images/banner.png" alt="" class="hero__banner">
+            <h2 class="hero__name">Александр Антропов</h2>
+            <h1 class="hero__info">web-разработчик</h1>
+            <div class="hero__social-info">
+                <div class="hero__additionall">
+                    <a href="#"class="hero__discussion">Обсудить проект</a>
+                    <img class="herro__arrow" src="./images/objects/arrow.svg" alt="">
                 </div>
-                <div class="hero__web">
-                    <div class="hero__web-info">
-                        <p class="hero__description">FRONT-END</p>
-                        <p class="hero__text">HTML+CSS+JS кодирование дизайнов любой сложности</p>
+                <div class="hero__social">
+                    <a href="#" class="hero__social-link">Vk</a>
+                    <a href="#" class="hero__social-link">Youtube <span class="hero__ellipse"></span></a>
+                    <a href="#" class="hero__social-link">Linkedin</a>
+                </div>
+            </div>
+            <div class="hero__web">
+                <div class="hero__web-info">
+                    <p class="hero__description">FRONT-END</p>
+                    <p class="hero__text">HTML+CSS+JS кодирование дизайнов любой сложности</p>
+                </div>
+                <div class="hero__web-info">
+                    <p class="hero__description">Back-end</p>
+                    <p class="hero__text">Разработка сложной back-end логики для готового front-end</p>
+                </div>
+                <div class="hero__web-info">
+                    <p class="hero__description">WORDPRESS</p>
+                    <p class="hero__text">Разработка сайтов - от блога до интернет магазина</p>
+                </div>
+                <div class="hero__web-info">
+                    <p class="hero__description">SEO продвижение</p>
+                    <p class="hero__text">Качественное улучшение позиций сайта в поисковой выдаче</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <article>
+        <article class="container">
+            <div class="article__about-info">
+                <h2 class="article__about">Обо&nbsp;мне</h2>
+                <p class="article__about-text">Создаю только эффективные решения, которые работают на результат: от одностраничных сайтов, до крупных интернет-порталов.</p>
+            </div>
+        </article>
+        <div class="container">
+            <div class="article__wrap">
+                <div class="article__grid-info">
+                    <div class="article__quality-info">
+                        <h2 class="article__skills">Контроль</h2>
+                        <p class="article__skills-info">Предоставление результатов на каждом этапе работы с возможностью внести правки</p>
                     </div>
-                    <div class="hero__web-info">
-                        <p class="hero__description">Back-end</p>
-                        <p class="hero__text">Разработка сложной back-end логики для готового front-end</p>
+                    <div class="article__quality-info">
+                        <h2 class="article__skills">Ответственность</h2>
+                        <p class="article__skills-info">Фриланс как основная деятельность, что означает полную отдачу в процессе работы над заказом</p>
                     </div>
-                    <div class="hero__web-info">
-                        <p class="hero__description">WORDPRESS</p>
-                        <p class="hero__text">Разработка сайтов - от блога до интернет магазина</p>
+                    <div class="article__quality-info">
+                        <h2 class="article__skills">Исполнительность</h2>
+                        <p class="article__skills-info">Внимательность ко всем требованиям заказчика и прояснение любых моментов</p>
                     </div>
-                    <div class="hero__web-info">
-                        <p class="hero__description">SEO продвижение</p>
-                        <p class="hero__text">Качественное улучшение позиций сайта в поисковой выдаче</p>
+                    <div class="article__quality-info">
+                        <h2 class="article__skills">Качество</h2>
+                        <p class="article__skills-info">Высокое качество как графических материалов, так и внутренних алгоритмов работы сайта</p>
                     </div>
                 </div>
             </div>
-        </secrion>
-    </header>
+            <div class="article__grid-details">
+                <div class="article__grid-vertical">
+                    <h2 class="article__stage">01 Вы заказываете сайт</h2>
+                    <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                </div>
+                <div class="article__grid-vertical">
+                    <h2 class="article__stage">01 Вы заказываете сайт</h2>
+                    <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                </div>
+                <div class="article__grid-vertical">
+                    <h2 class="article__stage">01 Вы заказываете сайт</h2>
+                    <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                </div>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
