--- a/src/index.html
+++ b/src/index.html
@@ -90,19 +90,41 @@
             </div>
             <div class="article__grid-details">
                 <div class="article__grid-vertical">
-                    <h2 class="article__stage">01 Вы заказываете сайт</h2>
-                    <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                    <div class="article__number-stage">
+                        <p class="article__number">01</p>
+                        <h2 class="article__stage">Вы заказываете сайт</h2>
+                    </div>
+                    <div class="article__stage-block">
+                        <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                    </div>
                 </div>
                 <div class="article__grid-vertical">
-                    <h2 class="article__stage">01 Вы заказываете сайт</h2>
-                    <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                    <div class="article__number-stage">
+                        <p class="article__number">02</p>
+                        <h2 class="article__stage">Обговариваем детали</h2>
+                    </div>
+                    <div class="article__stage-block">
+                        <p class="article__stage-text">Созваниваемся или списываемся любым удобным для вас способом</p>
+                    </div>
                 </div>
                 <div class="article__grid-vertical">
-                    <h2 class="article__stage">01 Вы заказываете сайт</h2>
-                    <p class="article__stage-text">Связываетесь со мной по телефону или через заявку на сайте</p>
+                    <div class="article__number-stage">
+                        <p class="article__number">03</p>
+                        <h2 class="article__stage">Этап программирования</h2>
+                    </div>
+                    <div class="article__stage-block">
+                        <p class="article__stage-text">Верстаю сайт по вашему проекту пиксель в пиксель</p>
+                    </div>
                 </div>
             </div>
         </div>
     </article>
+    <section>
+        <div class="container">
+            <div class="section__section-portfolio">
+                <h1 class="section__portfolio-txt">Портфолио <span class="section__red-circle"></span></h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
