--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,20 @@
                 <h1 class="section__portfolio-txt">Портфолио <span class="section__red-circle"></span></h1>
             </div>
         </div>
+        <div class="container">
+            <div class="section__portfolio-link">
+                <div class="section__portfolio-link-txt">
+                    <h2 class="section__name-project">Agata Bielen</h2>
+                    <ul class="section__description-project">
+                        <li>верстка по макету из Figma</li>
+                        <li>наполнение сайта контентом</li>
+                        <li>внедрена функция добавления видео</li>
+                    </ul>
+                    <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
+                </div>
+                <img src="./images/portfolio/img1.png" class="section__bnr-img" alt="">
+            </div>
+        </div>
     </section>
 </body>
 </html>
