--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,7 @@
                 <h1 class="section__portfolio-txt">Портфолио <span class="section__red-circle"></span></h1>
             </div>
         </div>
+        <div class="section__gradient"></div>
         <div class="container">
             <div class="section__portfolio-link">
                 <div class="section__portfolio-link-txt">
@@ -138,6 +139,19 @@
                 </div>
                 <img src="./images/portfolio/img1.png" class="section__bnr-img" alt="">
             </div>
+            <div class="section__portfolio-link">
+                <div class="section__portfolio-link-txt">
+                    <h2 class="section__name-project">Agata Bielen</h2>
+                    <ul class="section__description-project">
+                        <li>верстка по макету из Figma</li>
+                        <li>наполнение сайта контентом</li>
+                        <li>внедрена функция добавления видео</li>
+                    </ul>
+                    <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
+                </div>
+                <img src="./images/portfolio/img2.png" class="section__bnr-img" alt="">
+            </div>
+            <p class="section__myself-txt">Помимо создания сайтов и посадочных страниц я занимаюсь: настройкой контекстной рекламы в системах Яндекс.Директи Google AdWords, а так же поисковым продвижением сайтов</p>
         </div>
     </section>
 </body>
