--- a/src/index.html
+++ b/src/index.html
@@ -143,15 +143,109 @@
                 <div class="section__portfolio-link-txt">
                     <h2 class="section__name-project">Agata Bielen</h2>
                     <ul class="section__description-project">
-                        <li>верстка по макету из Figma</li>
-                        <li>наполнение сайта контентом</li>
-                        <li>внедрена функция добавления видео</li>
+                        <li>верстка по макету из PSD</li>
+                        <li>доступен функционал получения заказов</li>
+                        <li>реализована кнопка «Заказать в 1 клик»</li>
                     </ul>
                     <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
                 </div>
                 <img src="./images/portfolio/img2.png" class="section__bnr-img" alt="">
             </div>
             <p class="section__myself-txt">Помимо создания сайтов и посадочных страниц я занимаюсь: настройкой контекстной рекламы в системах Яндекс.Директи Google AdWords, а так же поисковым продвижением сайтов</p>
+            <div class="section__grid-container">
+                <div class="section__grid-box">
+                    <img src="./images/icons/money.svg" alt="">
+                    <div class="section__grid-discription">
+                        <h1 class="section__grid-txt">Актуальные цены</h1>
+                        <p class="section__grid-txt-discription">Ничего лишнего, без переплат,
+                        100% отработка ваших денег</p>
+                    </div>
+                </div>
+                <div class="section__grid-box">
+                    <img src="./images/icons/image.svg" alt="">
+                    <div class="section__grid-discription">
+                        <h1 class="section__grid-txt">Более 2-х лет опыта</h1>
+                        <p class="section__grid-txt-discription">Это моя основная деятельность,
+                            создано более 150+ сайтов</p>
+                    </div>
+                </div>
+                <div class="section__grid-box">
+                    <img src="./images/icons/clock.svg" alt="">
+                    <div class="section__grid-discription">
+                        <h1 class="section__grid-txt">Оптимальные сроки</h1>
+                        <p class="section__grid-txt-discription">Создание сайта любой сложности 
+                            в самые сжатые сроки</p>
+                    </div>
+                </div>
+                <div class="section__grid-box">
+                    <img src="./images/icons/phone.svg" alt="">
+                    <div class="section__grid-discription">
+                        <h1 class="section__grid-txt">Всегда на связи</h1>
+                        <p class="section__grid-txt-discription">Не теряюсь и не проматываю 
+                            сроки. Подхожу ответственно</p>
+                    </div>
+                </div>
+                <div class="section__grid-box">
+                    <img src="./images/icons/code-json.svg" alt="">
+                    <div class="section__grid-discription">
+                        <h1 class="section__grid-txt">Чистый код</h1>
+                        <p class="section__grid-txt-discription">HTML код без всего лишнего, плюс   адаптив под все устройства</p>
+                    </div>
+                </div>
+                <div class="section__grid-box">
+                    <img src="./images/icons/file.svg" alt="">
+                    <div class="section__grid-discription">
+                        <h1 class="section__grid-txt">Поддержка сайта</h1>
+                        <p class="section__grid-txt-discription">Быстро устраню любую проблему на вашем сайте</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="section__web-grid">
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/html.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/css.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/js.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/jquery.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/bootstrap.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/php.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a href="#"><img src="./images/logo/Vue.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+                <div class="section__web-box">
+                    <div class="section__web-grid-cntrl">
+                        <a class="section__cntrl" href="#"><img src="./images/logo/wordpress.svg" alt="" class="section__web-logo"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
