--- a/src/index.html
+++ b/src/index.html
@@ -206,46 +206,58 @@
             <div class="section__web-grid">
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/html.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/html.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/css.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/css.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/js.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/js.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/jquery.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/jquery.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/bootstrap.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/bootstrap.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/php.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/php.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a href="#"><img src="./images/logo/Vue.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/Vue.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
-                        <a class="section__cntrl" href="#"><img src="./images/logo/wordpress.svg" alt="" class="section__web-logo"></a>
+                        <a href="#" class="section__web-logo-container"><img src="./images/logo/wordpress.svg" alt="" class="section__web-logo">
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        
     </section>
 </body>
 </html>
