--- a/src/index.html
+++ b/src/index.html
@@ -207,49 +207,50 @@
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/html.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">HTML</p><p class="section__web-tooltip-txt-plus">Это код, который используется для структурирования и отображения веб-страницы и её контента.</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/css.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">CSS</p><p class="section__web-tooltip-txt-plus">Это язык описания внешнего вида документа, то есть он отвечает за то, как выглядят веб-страницы.</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/js.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам.</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/jquery.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">jQuery</p><p class="section__web-tooltip-txt-plus">Это инструмент, позволяющий ссылаться на текущий элемент или элементы в выбранном наборе.</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/bootstrap.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">
+                            Bootstrap</p><p class="section__web-tooltip-txt-plus">Это бесплатный фреймворк для более быстрой и простой веб-разработки</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/php.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">PHP</p><p class="section__web-tooltip-txt-plus">Это язык программирования, специально разработанный для написания web-приложений</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/Vue.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">VUE</p><p class="section__web-tooltip-txt-plus">Это фреймворк и экосистема, охватывающая большинство функций, необходимых при разработке.</p></span></a>
                     </div>
                 </div>
                 <div class="section__web-box">
                     <div class="section__web-grid-cntrl">
                         <a href="#" class="section__web-logo-container"><img src="./images/logo/wordpress.svg" alt="" class="section__web-logo">
-                        <span class="section__tooltip"><p class="section__web-tooltip-txt">JavaScript ES6+</p><p class="section__web-tooltip-txt-plus">Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам</p></span></a>
+                        <span class="section__tooltip"><p class="section__web-tooltip-txt">WordPress</p><p class="section__web-tooltip-txt-plus">Это веб-движок для создания, администрирования сайтов и управления контентом.</p></span></a>
                     </div>
                 </div>
                 </div>
@@ -257,7 +258,96 @@
         </div>
     </section>
     <section>
-        
+        <div class="container">
+            <div class="section__container-tariff-info">
+                <h2 class="section__tarrif">Тарифы<span class="section__tarrif-alepce"></span></h2>
+                <p class="section__tariff-info">Представленные ниже цены зависят<br> не только от того какой сайт вы хотите. Конечная цена будет озвучена после прочтения Вашего ТЗ</p>
+            </div>
+            <div class="section__development-container">
+                <div class="section__development-arrow-txt-info">
+                    <h2 class="section__development-txt">Разработка<br>лэндинга или сайт визитки</h2>
+                    <p class="section__development-paragraph">Небольшой сайт состоящий из одной страницы</p>
+                    <div class="section__development-arrow">
+                        <a href="#"class="section__development-discussion">Обсудить проект</a>
+                        <img class="section__development-arrow" src="./images/objects/arrow.svg" alt="">
+                    </div>
+                </div>
+                <div class="section__development-included">
+                    <p class="section__development-txt-inc">Что входит</p>
+                    <ul class="section__development-info">
+                        <li>Сайт на CMS WordPress</li>
+                        <li>Одна посадочная страница</li>
+                        <li>От 7 дней</li>
+                    </ul>
+                    <h2 class="section__seven">От 7 000 Р<span class="section__elipse-seven"></span></h2>
+                </div>
+            </div>
+            <div class="section__development-container">
+                <div class="section__development-arrow-txt-info">
+                    <h2 class="section__development-txt">Разработка<br>корпоративного  сайта</h2>
+                    <p class="section__development-paragraph">Небольшой сайт с n-количеством страниц</p>
+                    <div class="section__development-arrow">
+                        <a href="#"class="section__development-discussion">Обсудить проект</a>
+                        <img class="section__development-arrow" src="./images/objects/arrow.svg" alt="">
+                    </div>
+                </div>
+                <div class="section__development-included">
+                    <p class="section__development-txt-inc">Что входит</p>
+                    <ul class="section__development-info">
+                        <li>Сайт на CMS WordPress</li>
+                        <li>От 2-10 страниц</li>
+                        <li>От 15 дней</li>
+                    </ul>
+                    <h2 class="section__seven">От 10 000 Р</h2>
+                </div>
+            </div>
+            <div class="section__development-container">
+                <div class="section__development-arrow-txt-info">
+                    <h2 class="section__development-txt">Разработка<br>интернет - магазина</h2>
+                    <p class="section__development-paragraph">Полноценный каталог вашей продукции</p>
+                    <div class="section__development-arrow">
+                        <a href="#"class="section__development-discussion">Обсудить проект</a>
+                        <img class="section__development-arrow" src="./images/objects/arrow.svg" alt="">
+                    </div>
+                </div>
+                <div class="section__development-included">
+                    <p class="section__development-txt-inc">Что входит</p>
+                    <ul class="section__development-info">
+                        <li>Сайт на CMS WordPress</li>
+                        <li>От 2-10 страниц, корзина, карточка товара</li>
+                        <li>От 20 дней</li>
+                    </ul>
+                    <h2 class="section__seven">От 15 000 Р<span class="section__elipse-seven"></span></h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="section__my-project-container">
+                <h2 class="section__my-project">Расскажите <br>о своем проекте<span class="section__circle-tringle"></span></h2>
+                <p class="section__my-project-txt">Воспользуйтесь формой обратной связи, чтобы обсудить ваш проект, заполните все поля, и я свяжусь с вами в ближайшее время</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="section__form-container">
+                <div class="section__social-section">
+                    <a href="#" class="section__social-link">Vk</a>
+                    <a href="#" class="section__social-link">Youtube</a>
+                    <a href="#" class="section__social-link">Linkedin</a>
+                </div>
+                <div class="section__form-group">
+                    <label for="contact1">Телефон или почта</label>
+                    <input type="text" id="contact1" placeholder="Введите телефон">
+                  <select>
+                    <option>Telegram</option>
+                    <option>WhatsApp</option>
+                    <option>Viber</option>
+                    <option>Звонок на телефон</option>
+                    <option>SMS сообщение</option>
+                  </select>
+                </div>
+            </div>
     </section>
 </body>
 </html>
