--- a/src/index.html
+++ b/src/index.html
@@ -336,16 +336,9 @@
                     <a href="#" class="section__social-link">Youtube</a>
                     <a href="#" class="section__social-link">Linkedin</a>
                 </div>
-                <div class="section__form-group">
-                    <label for="contact1">Телефон или почта</label>
-                    <input type="text" id="contact1" placeholder="Введите телефон">
-                  <select>
-                    <option>Telegram</option>
-                    <option>WhatsApp</option>
-                    <option>Viber</option>
-                    <option>Звонок на телефон</option>
-                    <option>SMS сообщение</option>
-                  </select>
+                <div class="section__input-phone">
+                    <p class="section__phone-mail">Телефон или почта</p>
+                    <input class="section__input-type"class type="text" id="contact1" placeholder="Введите телефон">
                 </div>
             </div>
     </section>
