--- a/src/index.html
+++ b/src/index.html
@@ -339,6 +339,18 @@
                 <div class="section__input-phone">
                     <p class="section__phone-mail">Телефон или почта</p>
                     <input class="section__input-type"class type="text" id="contact1" placeholder="Введите телефон">
+                    <p class="section__connection">Выберите удобный способ связи</p>
+                    <div class="section__dropdown-container">
+                        <input type="checkbox" id="drop" />
+                        <label for="drop">Способ связи</label>
+                        <div class="section__content">
+                          <a href="#" class="section__dropdown-txt">Item One</a>
+                          <a href="#" class="section__dropdown-txt">Item One</a>
+                          <a href="#" class="section__dropdown-txt">Item One</a>
+                          <a href="#" class="section__dropdown-txt">Item One</a>
+                          <a href="#" class="section__dropdown-txt">Item One</a>     
+                        </div>
+                      </div>
                 </div>
             </div>
     </section>
