--- a/src/index.html
+++ b/src/index.html
@@ -344,11 +344,11 @@
                         <input type="checkbox" id="drop" />
                         <label for="drop">Способ связи</label>
                         <div class="section__content">
-                          <a href="#" class="section__dropdown-txt">Item One</a>
-                          <a href="#" class="section__dropdown-txt">Item One</a>
-                          <a href="#" class="section__dropdown-txt">Item One</a>
-                          <a href="#" class="section__dropdown-txt">Item One</a>
-                          <a href="#" class="section__dropdown-txt">Item One</a>     
+                          <a href="#" class="section__dropdown-txt">Telegram</a>
+                          <a href="#" class="section__dropdown-txt">WhatsApp                        </a>
+                          <a href="#" class="section__dropdown-txt">Viber</a>
+                          <a href="#" class="section__dropdown-txt">Звонок на телефон</a>
+                          <a href="#" class="section__dropdown-txt">SMS сообщение</a>     
                         </div>
                       </div>
                 </div>
