--- a/src/index.html
+++ b/src/index.html
@@ -351,8 +351,25 @@
                           <a href="#" class="section__dropdown-txt">SMS сообщение</a>     
                         </div>
                       </div>
+                      <button class="section__button">Отправить</button>
                 </div>
             </div>
     </section>
+    <div class="container">
+        <section class="footer">
+            <div class="footer__footer-info">
+                <a href="#" class="footer__footer-link">Обо мне</a>
+                <a href="#" class="footer__footer-link">Обо мне</a>
+                <a href="#" class="footer__footer-link">Обо мне</a>
+                <a href="#" class="footer__footer-link">Обо мне</a>
+                <a href="#" class="footer__footer-link">Обо мне</a>
+            </div>
+            <div class="footer__footer-contact">
+                <a href="#" class="footer__phone-link">8 923 777-77-77</a>
+                <span class="footer__footer-seporator"></span>
+                <a href="#" class="footer__footer-mail">alexdev@gmail.com</a>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
