--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,9 @@
                     </ul>
                     <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
                 </div>
-                <img src="./images/portfolio/img1.png" class="section__bnr-img" alt="">
+                <div class="section__bnr-img-cont">
+                    <img src="./images/portfolio/img1.png" class="section__bnr-img" alt="">
+                </div>
             </div>
             <div class="section__portfolio-link">
                 <div class="section__portfolio-link-txt">
@@ -149,7 +151,9 @@
                     </ul>
                     <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
                 </div>
-                <img src="./images/portfolio/img2.png" class="section__bnr-img" alt="">
+                <div class="section__bnr-img-cont">
+                    <img src="./images/portfolio/img2.png" class="section__bnr-img" alt="">
+                </div>
             </div>
             <p class="section__myself-txt">Помимо создания сайтов и посадочных страниц я занимаюсь: настройкой контекстной рекламы в системах Яндекс.Директи Google AdWords, а так же поисковым продвижением сайтов</p>
             <div class="section__grid-container">
@@ -357,17 +361,23 @@
     </section>
     <div class="container">
         <section class="footer">
-            <div class="footer__footer-info">
-                <a href="#" class="footer__footer-link">Обо мне</a>
-                <a href="#" class="footer__footer-link">Обо мне</a>
-                <a href="#" class="footer__footer-link">Обо мне</a>
-                <a href="#" class="footer__footer-link">Обо мне</a>
-                <a href="#" class="footer__footer-link">Обо мне</a>
+            <div class="footer__footer-info-block">
+                <div class="footer__footer-info">
+                    <a href="#" class="footer__footer-link">Обо мне</a>
+                    <a href="#" class="footer__footer-link">Обо мне</a>
+                    <a href="#" class="footer__footer-link">Обо мне</a>
+                    <a href="#" class="footer__footer-link">Обо мне</a>
+                    <a href="#" class="footer__footer-link">Обо мне</a>
+                </div>
+                <div class="footer__footer-contact">
+                    <a href="#" class="footer__phone-link">8 923 777-77-77</a>
+                    <span class="footer__footer-seporator"></span>
+                    <a href="#" class="footer__footer-mail">alexdev@gmail.com</a>
+                </div>
             </div>
-            <div class="footer__footer-contact">
-                <a href="#" class="footer__phone-link">8 923 777-77-77</a>
-                <span class="footer__footer-seporator"></span>
-                <a href="#" class="footer__footer-mail">alexdev@gmail.com</a>
+            <div class="footer__info-and">
+                <p class="footer__reserved">© 2020, Все права защищены</p>
+                <p class="footer__">Сделано в рамках курса учебной платформы <a href="#" class="AB">Annblok</a></p>
             </div>
         </section>
     </div>
