--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
     </header>
     <main class="hero">
         <div class="container">
-            <img src="./images/banner.png" alt="" class="hero__banner">
+            <div class="hero__img-bnr">
+                <img src="./images/banner.png" alt="" class="hero__banner">
+            </div>
             <h2 class="hero__name">Александр Антропов</h2>
             <h1 class="hero__info">web-разработчик</h1>
             <div class="hero__social-info">
@@ -143,7 +145,7 @@
             </div>
             <div class="section__portfolio-link">
                 <div class="section__portfolio-link-txt">
-                    <h2 class="section__name-project">Agata Bielen</h2>
+                    <h2 class="section__name-project">Lemons</h2>
                     <ul class="section__description-project">
                         <li>верстка по макету из PSD</li>
                         <li>доступен функционал получения заказов</li>
