--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,9 @@
                     <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
                 </div>
                 <div class="section__bnr-img-cont">
-                    <img src="./images/portfolio/img1.png" class="section__bnr-img" alt="">
+                    <a href="" class="bnr-img-link">
+                        <img src="./images/portfolio/img1.png" class="section__bnr-img" alt="">
+                    </a>
                 </div>
             </div>
             <div class="section__portfolio-link">
@@ -153,9 +155,9 @@
                     </ul>
                     <p class="section__hours">Затрачено времени: 5 рабочих дней</p>
                 </div>
-                <div class="section__bnr-img-cont">
+                <a href="" class="bnr-img-link">
                     <img src="./images/portfolio/img2.png" class="section__bnr-img" alt="">
-                </div>
+                </a>
             </div>
             <p class="section__myself-txt">Помимо создания сайтов и посадочных страниц я занимаюсь: настройкой контекстной рекламы в системах Яндекс.Директи Google AdWords, а так же поисковым продвижением сайтов</p>
             <div class="section__grid-container">
@@ -366,10 +368,10 @@
             <div class="footer__footer-info-block">
                 <div class="footer__footer-info">
                     <a href="#" class="footer__footer-link">Обо мне</a>
-                    <a href="#" class="footer__footer-link">Обо мне</a>
-                    <a href="#" class="footer__footer-link">Обо мне</a>
-                    <a href="#" class="footer__footer-link">Обо мне</a>
-                    <a href="#" class="footer__footer-link">Обо мне</a>
+                    <a href="#" class="footer__footer-link">Портфолио</a>
+                    <a href="#" class="footer__footer-link">Этапы работ</a>
+                    <a href="#" class="footer__footer-link">Цены</a>
+                    <a href="#" class="footer__footer-link">Обратная связь</a>
                 </div>
                 <div class="footer__footer-contact">
                     <a href="#" class="footer__phone-link">8 923 777-77-77</a>
