--- a/src/index.html
+++ b/src/index.html
@@ -329,16 +329,13 @@
                 </div>
             </div>
         </div>
+        <div class="section__line"></div>
     </section>
     <section>
         <div class="container">
-            <div class="section__my-project-container">
+            <div class="section__grid-my-project">
                 <h2 class="section__my-project">Расскажите <br>о своем проекте<span class="section__circle-tringle"></span></h2>
                 <p class="section__my-project-txt">Воспользуйтесь формой обратной связи, чтобы обсудить ваш проект, заполните все поля, и я свяжусь с вами в ближайшее время</p>
-            </div>
-        </div>
-        <div class="container">
-            <div class="section__form-container">
                 <div class="section__social-section">
                     <a href="#" class="section__social-link">Vk</a>
                     <a href="#" class="section__social-link">Youtube</a>
@@ -362,6 +359,7 @@
                       <button class="section__button">Отправить</button>
                 </div>
             </div>
+        </div>
     </section>
     <div class="container">
         <section class="footer">
