--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,9 @@
                 <div class="header__contact-link">
                     <a href="#" class="header__phone">8 923 777-77-77</a>
                     <span class="header__separator"></span>
-                    <a href="#" class="header__amail">alexdev@gmail.com</a>
+                    <a href="#" class="header__amail">alexdev@gmail.com</a>    
                 </div>
+                <button class="header__burger-menu" onclick="openModal()"></button>
             </div>
         </div>
     </header>
@@ -382,6 +383,16 @@
                 <p class="footer__">Сделано в рамках курса учебной платформы <a href="#" class="AB">Annblok</a></p>
             </div>
         </section>
+    </div>
+    <div class="header__modal" id="modal">
+        <div class="header__link-modal">
+            <a href="#" class="header__nav-link-modal">Обо мне</a>
+            <a href="#" class="header__nav-link-modal">Портфолио</a>
+            <a href="#" class="header__nav-link-modal">Этапы работ</a>
+            <a href="#" class="header__nav-link-modal">Цены</a>
+            <a href="#" class="header__nav-link-modal">Обратная связь</a>
+        </div>
+        <button class="header__modal-close"></button>
     </div>
 </body>
 </html>
